# maray

./: .gitignore  Cargo.toml  README.md
data/: chess.maray
examples/: chess.rs  maray.rs  test.rs  test2.rs  test3.rs  test4.rs  test5.rs  test6.rs  test7.rs
src/: cache.rs  compressor.rs  constant.rs  constant_reduction.rs  grid.rs  lib.rs  memory_manager.rs  partial_eval.rs  partial_red.rs  render.rs  report.rs  sd.rs  semantics.rs  simplify.rs  textures.rs  token.rs  var_fixer.rs  wasm.rs
