[package]
name = "maray"
version = "0.3.2"
edition = "2021"
keywords = ["advancedresearch", "jit", "ray", "tracing", "math"]
description = "JIT Ray Tracing using basic math"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/maray.git"
homepage = "https://github.com/advancedresearch/maray"
exclude = ["data/*", "images/*"]

[dependencies]
image = {version = "0.25.1", optional = true}
rayon = {version = "1.10.0", optional = true}
wasmer = {version = "4.3.2", optional = true}
anyhow = "1.0.86"
bincode = "1.3.3"
serde = {version = "1.0.203", features = ["derive"]}
current = {version = "0.1.2", optional = true}
fnv = "1.0.7"

[dev-dependencies]
clap = "4.5.7"

[features]
default = ["render"]
render = ["image", "rayon", "wasmer", "current"]
